lander.lessons.lander.lvl3_fly_the_lander.FlyTheLander.scala.error
Lander:6: error: type mismatch;
 found   : Int(2)
 required: lessons.lander.universe.Point
  	var debut = Array[Point](2)
                                 ^Lander:7: error: type mismatch;
 found   : Int(2)
 required: lessons.lander.universe.Point
  	var fin = Array[Point](2)
                               ^Lander:10: error: type mismatch;
 found   : Double
 required: lessons.lander.universe.Point
  			debut(0)=liste(i).x
                                          ^Lander:11: error: type mismatch;
 found   : Double
 required: lessons.lander.universe.Point
  			debut(1)=liste(i).y
                                          ^Lander:12: error: type mismatch;
 found   : Double
 required: lessons.lander.universe.Point
  			fin(0)=liste(i+1).x
                                          ^Lander:13: error: not found: value Liste
  			fin(1)=Liste(i+1).y
                               ^Lander:16: error: overloaded method value > with alternatives:
  (x: Double)Boolean <and>
  (x: Float)Boolean <and>
  (x: Long)Boolean <and>
  (x: Int)Boolean <and>
  (x: Char)Boolean <and>
  (x: Short)Boolean <and>
  (x: Byte)Boolean
 cannot be applied to (lessons.lander.universe.Point)
  	if (getX>debut(0) && getX<fin(0)) {
                ^Lander:23: error: overloaded method value < with alternatives:
  (x: Double)Boolean <and>
  (x: Float)Boolean <and>
  (x: Long)Boolean <and>
  (x: Int)Boolean <and>
  (x: Char)Boolean <and>
  (x: Short)Boolean <and>
  (x: Byte)Boolean
 cannot be applied to (lessons.lander.universe.Point)
  		if (getX<debut(0)) {
                        ^Lander:24: error: not found: value setAngleDesiree
  			setAngleDesiree(-45)
                        ^Lander:26: error: not found: value setAngleDesiree
  			setAngleDesiree(45)
                        ^